--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "blitz build",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "commit": "gacp"
   },
   "browserslist": [
     "defaults"
@@ -16,28 +17,33 @@
     "semi": false,
     "printWidth": 100
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && pretty-quick --staged",
-      "pre-push": "blitz test"
-    }
-  },
   "lint-staged": {
     "*.{js,ts,tsx}": [
       "eslint --fix"
     ]
   },
+  "gacp": {
+    "add": true,
+    "push": true,
+    "emoji": "code",
+    "editor": false,
+    "hooks": {
+      "precommit": "lint-staged && pretty-quick --staged",
+      "prepush": "blitz test",
+      "postpush": ""
+    }
+  },
   "dependencies": {
     "@prisma/cli": "2.7.0",
     "@prisma/client": "2.7.0",
     "blitz": "0.22.2-canary.0",
+    "final-form": "4.20.1",
     "react": "0.0.0-experimental-7f28234f8",
     "react-dom": "0.0.0-experimental-7f28234f8",
     "react-error-boundary": "2.3.2",
+    "react-final-form": "6.5.1",
     "secure-password": "4.0.0",
-    "zod": "1.11.8",
-    "final-form": "4.20.1",
-    "react-final-form": "6.5.1"
+    "zod": "1.11.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.11.4",
@@ -56,16 +62,17 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "4.1.2",
+    "gacp": "2.10.0",
     "husky": "4.3.0",
     "jest": "26.4.2",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-watch-typeahead": "0.6.1",
-    "react-test-renderer": "16.13.1",
     "lint-staged": "10.3.0",
     "prettier": "2.1.1",
     "pretty-quick": "3.0.2",
-    "typescript": "4.0.2",
-    "ts-jest": "26.3.0"
+    "react-test-renderer": "16.13.1",
+    "ts-jest": "26.3.0",
+    "typescript": "4.0.2"
   },
   "private": true
 }
